--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "orbitdb": "./src/bin.js"
   },
   "main": "src/bin.js",
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "dependencies": {
-    "ipfs": "~0.25.1",
+    "ipfs": "~0.26.0",
     "logplease": "~1.2.14",
-    "orbit-db": "github:orbitdb/orbit-db#feat/cli",
-    "p-map-series": "^1.0.0",
+    "orbit-db": "~0.18.0",
+    "p-map-series": "~1.0.0",
     "p-whilst": "~1.0.0",
     "pipe-args": "^1.3.0",
     "progress-string": "~1.2.1",
