--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "ipfs": "~0.28.0",
+    "ipfs": "~0.30.1",
     "logplease": "~1.2.14",
-    "orbit-db": "~0.19.7",
+    "orbit-db": "orbitdb/orbit-db",
     "p-map-series": "~1.0.0",
     "p-whilst": "~1.0.0",
     "pipe-args": "^1.3.0",
