--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "ipfs": "~0.30.1",
     "logplease": "~1.2.14",
     "orbit-db": "orbitdb/orbit-db",
