--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "stoppable": "^1.0.6",
     "ipfs": "~0.30.1",
     "logplease": "~1.2.14",
     "orbit-db": "orbitdb/orbit-db",
