Adding haydenyoung to contributors list.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prabodhmeshram",
     "RichardLitt",
     "dset0x",
-    "adam-palazzo"
+    "adam-palazzo",
+    "haydenyoung"
   ],
   "license": "MIT",
   "repository": {
