--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
-    "ipfs": "~0.34.4",
+    "ipfs": "~0.36.4",
     "logplease": "~1.2.14",
-    "orbit-db": "0.20.0",
+    "orbit-db": "^0.21.0",
     "p-map-series": "~1.0.0",
     "p-whilst": "~1.0.0",
     "pipe-args": "^1.3.0",
