--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -3,7 +3,9 @@ description: File a feature request
 title: "[Feature]: "
 labels: ["feature", "triage"]
 assignees:
-  - adrienfort # Update it
+  - Saverio976
+  - YlanGarnier
+  - paulogarithm
 body:
   - type: markdown
     attributes:
