--- a/package.json
+++ b/package.json
@@ -1,20 +1,72 @@
 {
-  "name": "orbit-db-cli",
-  "version": "1.0.0",
-  "description": "> If you see this section, you've just created a repository using [PoC Innovation's Open-Source project template](https://github.com/PoCInnovation/open-source-project-template). Check the [getting started guide](./.github/getting-started.md).",
-  "main": "index.js",
+  "name": "orbitdb",
+  "version": "0.0.0",
+  "description": "The orbitdb CLI",
+  "author": "PoC Innovation",
+  "bin": {
+    "orbitdb": "./bin/run"
+  },
+  "homepage": "https://github.com/paulogarithm/orbitdb",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "repository": "paulogarithm/orbitdb",
+  "files": [
+    "/bin",
+    "/dist",
+    "/npm-shrinkwrap.json",
+    "/oclif.manifest.json"
+  ],
+  "dependencies": {
+    "@oclif/core": "^2",
+    "@oclif/plugin-help": "^5",
+    "@oclif/plugin-plugins": "^2.4.7"
+  },
+  "devDependencies": {
+    "@oclif/test": "^2.3.21",
+    "@types/chai": "^4",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.18.34",
+    "chai": "^4",
+    "eslint": "^7.32.0",
+    "eslint-config-oclif": "^4",
+    "eslint-config-oclif-typescript": "^1.0.3",
+    "mocha": "^9",
+    "oclif": "^3",
+    "shx": "^0.3.3",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.5.2",
+    "typescript": "^4.9.5"
+  },
+  "oclif": {
+    "bin": "orbitdb",
+    "dirname": "orbitdb",
+    "commands": "./dist/commands",
+    "plugins": [
+      "@oclif/plugin-help",
+      "@oclif/plugin-plugins"
+    ],
+    "topicSeparator": " ",
+    "topics": {
+      "hello": {
+        "description": "Say hello to the world and others"
+      }
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "build": "shx rm -rf dist && tsc -b",
+    "lint": "eslint . --ext .ts --config .eslintrc",
+    "postpack": "shx rm -f oclif.manifest.json",
+    "posttest": "npm run lint",
+    "prepack": "npm run build && oclif manifest && oclif readme",
+    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "version": "oclif readme && git add README.md"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PoCInnovation/orbit-db-cli.git"
+  "engines": {
+    "node": ">=12.0.0"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/PoCInnovation/orbit-db-cli/issues"
-  },
-  "homepage": "https://github.com/PoCInnovation/orbit-db-cli#readme"
+  "bugs": "https://github.com/paulogarithm/orbitdb/issues",
+  "keywords": [
+    "oclif"
+  ],
+  "types": "dist/index.d.ts"
 }
