--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orbitdb",
+  "name": "orbitdb-cli-new",
   "version": "0.0.0",
   "description": "The orbitdb CLI",
   "author": "PoC Innovation",
