Fix: Work on main only
Make it work on pull requests and push on main only

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,7 +3,10 @@ name: Publish CLI on Npm
 on:
   push:
     branches:
-      - '*'
+      - main
+  pull-requests:
+    branches:
+      - main
 
 jobs:
   publish:
