--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-node_modules/
-dist/
-.vscode/
-.env
+**/.DS_Store
+*-debug.log
+*-error.log
+/.idea
+/.nyc_output
+/dist
+/lib
+/package-lock.json
+/tmp
+/yarn.lock
+node_modules
+oclif.manifest.json
